--- a/index.html
+++ b/index.html
@@ -1,7 +1,48 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <title>My Personal Blog</title>
+    <style>
+      /* Add your CSS styles here */
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+
+      header {
+        background-color: lightgray;
+        padding: 20px;
+        text-align: center;
+      }
+
+      h1 {
+        margin: 0;
+      }
+
+      main {
+        max-width: 800px;
+        margin: 40px auto;
+        padding: 20px;
+      }
+
+      h2 {
+        margin-bottom: 20px;
+      }
+
+      p {
+        line-height: 1.5;
+        margin-bottom: 20px;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>My Personal Blog</h1>
+    </header>
+    <main>
+      <h2>Welcome to my blog!</h2>
+      <p>This is my first blog post. I'm excited to start sharing my thoughts and experiences with you all.</p>
+    </main>
+  </body>
 </html>
