--- a/index.html
+++ b/index.html
@@ -1,40 +1,8 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
   <head>
     <title>My Personal Blog</title>
-    <style>
-      /* Add your CSS styles here */
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-      }
-
-      header {
-        background-color: lightgray;
-        padding: 20px;
-        text-align: center;
-      }
-
-      h1 {
-        margin: 0;
-      }
-
-      main {
-        max-width: 800px;
-        margin: 40px auto;
-        padding: 20px;
-      }
-
-      h2 {
-        margin-bottom: 20px;
-      }
-
-      p {
-        line-height: 1.5;
-        margin-bottom: 20px;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <header>
